fix: assign dark mode class only to html element

--- a/client/src/assets/styles/_color-themes.scss
+++ b/client/src/assets/styles/_color-themes.scss
@@ -1,11 +1,13 @@
 // color themes ----------------
 html.dark-mode {
   background-color: theme-color("dark-mode") !important;
-}
-body.dark-mode {
   transition: all 500ms ease-in-out;
-  background-color: theme-color("dark-mode") !important;
-  color: theme-color("light");
+
+  body {
+    transition: all 500ms ease-in-out;
+    background-color: theme-color("dark-mode") !important;
+    color: theme-color("light");
+  }
 
   // general ----------------
   // white in dark theme
